fix: card overflow
changed max card with to 100vw to prevent overflow

--- a/src/app/features/event/card/card.component.scss
+++ b/src/app/features/event/card/card.component.scss
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  max-width: 100vw;
 
   &__power-icon {
     transform: translate(-110px, 5px);
